infra/istio-telemetry-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-grafana-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 15031
      name: http-grafana
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: telemetry-grafana-virtual-service
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-grafana-gateway
  http:
  - match:
    - port: 15031
    route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
